# Robotic-Manipulator-

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  UPDATED_PROJECT_WORKFLOW_INSTRUCTIONS.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: baseline_cnn.yaml  baseline_cnn_gru.yaml  baseline_cnn_lstm.yaml  data.yaml  diffusion.yaml  edge_deployment.yaml  evaluation.yaml  simulation.yaml  trajectory_analysis.yaml  vae.yaml
docs/: 15_testing_strategy.md  GITHUB_REPO_RECOMMENDATIONS.md  PRESENTATION_GUIDE.md  REPORT_GENERATION_GUIDE.md  copilot_repo_instruction_pack_3_link_manipulator.md
notebooks/: neural_network_training_only.ipynb  standalone_cvae_full_pipeline.ipynb  standalone_remaining_eval_notebook.ipynb
scripts/: analyze_trajectories.py  benchmark_edge_inference.py  build_standalone_cvae_notebook.py  build_standalone_remaining_eval_notebook.py  build_training_only_notebook.py  compare_pytorch_vs_onnx.py  compare_trajectory_methods.py  diagnose_diffusion.py  evaluate_models.py  export_model_to_onnx.py  finalize_full_evaluation_fast.py  finalize_full_evaluation_from_caches.py  generate_data.py  generate_full_diffusion_cache.py  generate_thesis_figures.py  generate_trajectory_report.py  plot_results.py  plot_trajectory_analysis.py  profile_memory_latency.py  run_all_experiments.py  run_edge_inference_loop.py  run_full_diffusion_eval.py  test_sensor_stream.py  train_baselines.py  train_diffusion.py  train_vae.py  visualize_trajectories.py
src/evaluate/: ablations.py  (+2 more)
tests/: conftest.py
thesis_notes/: outline.md  project_status.md
(+94 files in other folders)
